Update installer to export scene.text